--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
-    <title>Rotolo di Marmo</title>
+    <title>ℛ𝑜𝓉𝑜𝓁𝑜 𝒹𝒾 ℳ𝒶𝓇𝓂𝑜</title>
 </head>
 
 <body>
