--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
         <div>
             <h1>Ricette Ufficiali di Marble Roll</h1>
             <h2 style="margin-top: -8px; margin-left: -36px;">dal 1922</h2>
+            <br />
+            <h3 style="width: min(700px,85%);">“MarbleRoll è un fantastico ristorante <a
+                    href="https://www.google.it/maps/place/00058+Santa+Marinella,+Metropolitan+City+of+Rome+Capital">situato
+                    nei pressi di Roma</a>. Il nostro locale è ad oggi il punto di riferimento per coloro che sono
+                dotati di un palato raffinato o che sono interessati a degustare i migliori sapori che la capitale Italiana può offrire.”
+            </h3>
+            <h4><a href="https://e-z.bio/adriza" style="font-family: Yellowtail, cursive;">- Il nostro Chef Stellato,
+                    Adriano</a>
         </div>
     </section>
     <section>
@@ -144,7 +152,6 @@
                 croccante crumble di mandorle.</p>
         </div>
     </section>
-    <h1><a href="https://e-z.bio/adriza" style="font-family: Yellowtail, cursive;">- Il nostro Chef Stellato</a></h1>
 </body>
 <style>
     :root {
